welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ':' expected but identifier found.
 def move(int nbPas,boolean versLAvant):{
              ^Program:13: error: identifier expected but '}' found.
}
^